[gd_scene load_steps=45 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://ca7gowohpmsx4" path="res://Scripts/PlayerCharacter/QuakelikeController/playerMovement.gd" id="1_3aho1"]
[ext_resource type="Curve" uid="uid://cfrywcgb3icf7" path="res://Scripts/PlayerCharacter/QuakelikeController/45degreecurve.tres" id="2_4qff7"]
[ext_resource type="Curve" uid="uid://bnx0beailqv82" path="res://Scripts/PlayerCharacter/QuakelikeController/slideDragCurve.tres" id="3_chq6j"]
[ext_resource type="Curve" uid="uid://d3pljhh44al2d" path="res://Scripts/PlayerCharacter/QuakelikeController/slopeAngleCurve.tres" id="4_rvq41"]
[ext_resource type="Curve" uid="uid://b54ldf6ddcg4p" path="res://Scripts/PlayerCharacter/QuakelikeController/wallRunCurve.tres" id="5_ydctx"]
[ext_resource type="Script" uid="uid://bq5krjnl8sobg" path="res://Scripts/PlayerCharacter/QuakelikeController/playerCamera.gd" id="6_0agbx"]
[ext_resource type="Resource" uid="uid://df87vs52wxjrn" path="res://Scripts/PlayerCharacter/QuakelikeController/jumpAnim.tres" id="7_0xfjf"]
[ext_resource type="Resource" uid="uid://cb3q3oq5pi16x" path="res://Scripts/PlayerCharacter/QuakelikeController/landAnim.tres" id="8_kdof8"]
[ext_resource type="Resource" uid="uid://ciyb54t241ip8" path="res://Scripts/PlayerCharacter/QuakelikeController/landRot.tres" id="9_msp70"]
[ext_resource type="Resource" uid="uid://b0t6fapfb6cnx" path="res://Scripts/PlayerCharacter/QuakelikeController/slideAnim.tres" id="10_43gd7"]
[ext_resource type="Resource" uid="uid://c77roo24tjr7n" path="res://Scripts/PlayerCharacter/QuakelikeController/wallRunAnim.tres" id="11_do0ij"]
[ext_resource type="PackedScene" uid="uid://c2gc2gd8uieuy" path="res://Scripts/PlayerCharacter/QuakelikeController/rope.tscn" id="12_vs6b3"]
[ext_resource type="Script" uid="uid://cah1ar152objn" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="13_4hp3t"]
[ext_resource type="PackedScene" uid="uid://crm0oehiwfse0" path="res://Scenes/player scenes/viewmodel_camera.tscn" id="13_4qff7"]
[ext_resource type="Script" uid="uid://dagj6q680feiv" path="res://addons/shaker/data/Vector3/BaseShakerType3D.gd" id="14_hk0st"]
[ext_resource type="Script" uid="uid://cag7686hpmjtv" path="res://addons/shaker/data/Vector3/ShakerTypeNoiseShake3D.gd" id="15_1rskr"]
[ext_resource type="Script" uid="uid://c6p8i70e7v4r4" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="16_touoi"]
[ext_resource type="Script" uid="uid://cqqllsd47fdx5" path="res://addons/shaker/data/Vector3/ShakerTypeSineWave3D.gd" id="17_thytq"]
[ext_resource type="Script" uid="uid://b1drv2x10t4bn" path="res://Scripts/PlayerCharacter/QuakelikeController/grappleHook.gd" id="18_4hp3t"]
[ext_resource type="Script" uid="uid://chqhqgfloska7" path="res://Scripts/weaponSystem/weapon_hitbox_sync.gd" id="19_43gd7"]
[ext_resource type="Curve" uid="uid://vahpdtrhcd6d" path="res://Scripts/PlayerCharacter/QuakelikeController/grappleCurve.tres" id="19_hk0st"]
[ext_resource type="Script" uid="uid://bmmijndfi05r7" path="res://Scripts/PlayerCharacter/QuakelikeController/ProceduralCurve.gd" id="20_1rskr"]
[ext_resource type="Script" uid="uid://lo0iiie2lcyc" path="res://Scripts/UI/canvas_layer.gd" id="22_chq6j"]
[ext_resource type="Script" uid="uid://cr4dyif2fsp2w" path="res://Scripts/state_machine/state_machine.gd" id="23_43gd7"]
[ext_resource type="Script" uid="uid://xgn83r6iu4wc" path="res://Scripts/state_machine/states/ground_state.gd" id="24_do0ij"]
[ext_resource type="Script" uid="uid://bum0fiuan4k5" path="res://Scripts/UI/magic_bar.gd" id="24_vs6b3"]
[ext_resource type="Texture2D" uid="uid://dwj5jj4ambvsl" path="res://Arts/Textures/vfx textures/crosshair.png" id="25_ugni6"]
[ext_resource type="Script" uid="uid://c5fft16wi787u" path="res://Scripts/state_machine/states/air_state.gd" id="25_vs6b3"]
[ext_resource type="Script" uid="uid://bvrq8nqjles4" path="res://Scripts/state_machine/states/dash_state.gd" id="26_4hp3t"]
[ext_resource type="Texture2D" uid="uid://ryvely80cx7r" path="res://Arts/Textures/vfx textures/crosshair_prog.png" id="27_21i5i"]
[ext_resource type="Script" uid="uid://c3hrcrnw6ny18" path="res://Scripts/state_machine/states/mantle_state.gd" id="27_hk0st"]
[ext_resource type="Script" uid="uid://d25lflodvj2j4" path="res://Scripts/state_machine/states/slide_state.gd" id="28_1rskr"]

[sub_resource type="Curve" id="Curve_43gd7"]
_data = [Vector2(0, 0), 0.0, 14.506283, 0, 0, Vector2(0.17647061, 1), 2.0560458, 2.0560458, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Resource" id="Resource_43gd7"]
script = ExtResource("20_1rskr")
curve = SubResource("Curve_43gd7")
length = 0.2
metadata/_custom_type_script = "uid://bmmijndfi05r7"

[sub_resource type="Curve" id="Curve_msp70"]
_data = [Vector2(0, 0), 0.0, 5.7716537, 0, 0, Vector2(0.3003195, 1), 0.93746656, 0.0, 0, 0, Vector2(0.6932907, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hwg68"]

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_mj65v"]
noise = SubResource("FastNoiseLite_hwg68")

[sub_resource type="Resource" id="Resource_3as0d"]
script = ExtResource("15_1rskr")
noise_texture = SubResource("NoiseTexture3D_mj65v")
amplitude = Vector3(0.01, 0, 0.01)

[sub_resource type="Resource" id="Resource_0qhj7"]
script = ExtResource("16_touoi")
RotationShake = Array[ExtResource("14_hk0st")]([SubResource("Resource_3as0d")])

[sub_resource type="Resource" id="Resource_jq34v"]
script = ExtResource("17_thytq")
frequency = Vector3(2, 3, 1)
phase = Vector3(0, 0, 0)
amplitude = Vector3(0.01, 0.1, 0)

[sub_resource type="Resource" id="Resource_gc7ew"]
script = ExtResource("16_touoi")
PositionShake = Array[ExtResource("14_hk0st")]([SubResource("Resource_jq34v")])

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v7r3x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_apj3w"]
height = 0.95
radius = 0.45

[sub_resource type="Resource" id="Resource_2e838"]
script = ExtResource("20_1rskr")
curve = ExtResource("19_hk0st")
length = 0.8

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("head", "camera_holder", "collider", "camera", "real_camera", "ceiling_check", "raycast_mantle_lower", "raycast_mantle_upper", "weapon_manager") groups=["player"]]
collision_mask = 28
floor_constant_speed = true
floor_snap_length = 0.4
script = ExtResource("1_3aho1")
melee_speed_multiplier = 0.3
air_strafe_curve = ExtResource("2_4qff7")
slide_drag_curve = ExtResource("3_chq6j")
slope_angle_drag_curve = ExtResource("4_rvq41")
wallrun_curve = ExtResource("5_ydctx")
head = NodePath("Head")
camera_holder = NodePath("Head/CameraHolder")
collider = NodePath("CollisionShape3D")
camera = NodePath("Head/CameraHolder/CameraShaker/Camera")
real_camera = NodePath("Head/CameraHolder/CameraShaker/Camera")
ceiling_check = NodePath("CeilingCheck")
raycast_mantle_lower = NodePath("Head/RayCastMantleLower")
raycast_mantle_upper = NodePath("Head/RayCastMantleUpper")
weapon_manager = NodePath("Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera/PLA/WeaponSlot")
wall_jump_multiplier = 1.2
wall_jump_momentum_keep = 1.0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="CameraHolder" type="Node3D" parent="Head"]

[node name="CameraShaker" type="Node3D" parent="Head/CameraHolder"]
transform = Transform3D(1, 2.98023e-08, -1.49012e-08, -2.98023e-08, 1, 3.72529e-09, 1.49012e-08, -3.72529e-09, 1, 3.16795e-08, -5.95464e-08, -5.96046e-08)

[node name="Camera" type="Camera3D" parent="Head/CameraHolder/CameraShaker" node_paths=PackedStringArray("player")]
cull_mask = 1048573
fov = 95.0
script = ExtResource("6_0agbx")
player = NodePath("../../../..")
jumpAnimation = ExtResource("7_0xfjf")
landPosAnimation = ExtResource("8_kdof8")
landRotAnimation = ExtResource("9_msp70")
hitShake = Vector3(0.5, 0.3, 0.2)
hitShakeAnimation = SubResource("Resource_43gd7")
slideAnimation = ExtResource("10_43gd7")
wallRunAnimation = ExtResource("11_do0ij")

[node name="GrappleRay" type="RayCast3D" parent="Head/CameraHolder/CameraShaker/Camera"]
target_position = Vector3(0, 0, -20)
collision_mask = 28

[node name="Rope" parent="Head/CameraHolder/CameraShaker/Camera" instance=ExtResource("12_vs6b3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.799999, -0.400002)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/CameraHolder/CameraShaker/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="viewmodel_camera" parent="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport" instance=ExtResource("13_4qff7")]
cull_mask = 2
bob_vertical_intensity = 0.04
bob_horizontal_intensity = 0.03
bob_speed = 10.0
walk_tilt_amount = 0.12
walk_roll_amount = 0.03
walk_sway_amount = 0.015
slide_tilt_amount = 0.12
slide_roll_amount = 0.08
slide_lower_amount = 0.08
crouch_tilt_amount = 0.06
crouch_roll_amount = 0.03
crouch_lower_amount = 0.06
crouch_center_amount = 0.04
dash_tilt_back = 0.1
dash_zoom_time = 0.2
dash_return_time = 1.0
mantle_animation_curve = SubResource("Curve_msp70")

[node name="Skeleton3D" parent="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera/PLA/Hands" index="0"]
bones/0/rotation = Quaternion(-0.26224315, -0.41010764, 0.82817566, -0.27778643)
bones/1/rotation = Quaternion(0.4383803, -0.53604865, 0.4567137, 0.5584686)
bones/2/rotation = Quaternion(0.11097673, -0.036989197, 0.11667074, 0.9862576)
bones/3/rotation = Quaternion(0.04924152, -0.013872869, -0.2692302, 0.9617161)
bones/4/rotation = Quaternion(-0.0021815633, -0.02159841, -0.22808388, 0.97339946)
bones/5/rotation = Quaternion(-0.017881695, -0.017650459, -0.23670113, 0.9712576)
bones/6/rotation = Quaternion(-5.909828e-08, -2.3558519e-07, -0.28311026, 0.9590874)
bones/9/rotation = Quaternion(-0.15909848, -0.044431668, -0.3448612, 0.92400455)
bones/12/rotation = Quaternion(-0.11325753, 0.022047412, -0.33417273, 0.9354226)
bones/15/rotation = Quaternion(0.4077186, 0.5527211, 0.010049014, 0.726749)
bones/16/rotation = Quaternion(-0.0023187697, 0.033364575, -0.3059206, 0.9514694)
bones/17/rotation = Quaternion(0.28035313, 0.9597341, -0.016546585, -0.006244084)
bones/19/position = Vector3(15.597708, -5.505482, -9.412009)
bones/19/rotation = Quaternion(0.011270072, -0.49546516, -0.5280841, 0.6895755)
bones/21/position = Vector3(16.155678, -5.498739, 10.316192)
bones/21/rotation = Quaternion(-0.62296337, -0.510807, -0.051943906, 0.590165)
bones/25/rotation = Quaternion(0.25282776, 0.4158997, 0.8259464, -0.28446138)
bones/26/rotation = Quaternion(0.4334804, -0.56881404, 0.423661, 0.5559287)
bones/28/rotation = Quaternion(0.12794694, 0.21071883, 0.05099807, 0.96779466)
bones/29/rotation = Quaternion(0.06542924, -0.06345555, 0.31398103, 0.94504416)
bones/30/rotation = Quaternion(0.036713853, -0.008411946, 0.21489455, 0.9759107)
bones/32/rotation = Quaternion(-0.003666782, -0.0041573537, 0.28657165, 0.95804286)
bones/33/rotation = Quaternion(-0.0023116919, 0.002700666, 0.490861, 0.87123066)
bones/34/rotation = Quaternion(4.2755695e-05, 0.0031327351, 0.21648398, 0.97628117)
bones/35/rotation = Quaternion(-0.14682709, 0.11691298, 0.31476322, 0.9304287)
bones/36/rotation = Quaternion(-0.056946903, -0.017322639, 0.3704698, 0.92693543)
bones/37/rotation = Quaternion(-0.006581569, 0.013516766, 0.33705282, 0.9413658)
bones/38/rotation = Quaternion(-0.14972909, 0.016568061, 0.3540522, 0.9230134)
bones/39/rotation = Quaternion(0.049743142, -0.007780324, 0.30753532, 0.9502037)
bones/40/rotation = Quaternion(-0.0051628524, 0.041489165, 0.40752247, 0.91223764)
bones/41/rotation = Quaternion(0.014911396, 0.6726154, 0.38134947, 0.6339864)
bones/42/rotation = Quaternion(-0.026349133, 0.05609068, -0.30690828, 0.9497194)
bones/43/rotation = Quaternion(0.24693452, 0.96876353, 0.021869238, -0.0065129343)

[node name="WeaponSlot" parent="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera/PLA/Hands/Skeleton3D" index="1"]
transform = Transform3D(-0.4800115, -0.43753782, 0.7603617, -0.56848574, 0.8152719, 0.110253036, -0.6681416, -0.379332, -0.6400739, 18.004404, -5.734468, 7.595409)

[node name="WeaponSlot" parent="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera/PLA" index="3" node_paths=PackedStringArray("hitbox_sync", "camera_shaker")]
hitbox_sync = NodePath("../../../../../WeaponHitbox")
camera_shaker = NodePath("../../../../../..")

[node name="WeaponHitbox" type="Node3D" parent="Head/CameraHolder/CameraShaker/Camera"]
transform = Transform3D(1, -2.98023e-08, 1.49012e-08, 2.98023e-08, 1, -3.7252899e-09, -1.49012e-08, 3.7252907e-09, 1, -3.16795e-08, 5.9604645e-08, 5.96046e-08)
script = ExtResource("19_43gd7")

[node name="Hitbox" type="Area3D" parent="Head/CameraHolder/CameraShaker/Camera/WeaponHitbox"]
collision_layer = 0
collision_mask = 32

[node name="ShakerComponent3D" type="Node3D" parent="Head/CameraHolder/CameraShaker"]
script = ExtResource("13_4hp3t")
AutoPlay = true
shakerPreset = SubResource("Resource_0qhj7")

[node name="ShakerComponent3D2" type="Node3D" parent="Head/CameraHolder/CameraShaker"]
script = ExtResource("13_4hp3t")
AutoPlay = true
shakerPreset = SubResource("Resource_gc7ew")

[node name="RayCastMantleLower" type="RayCast3D" parent="Head"]
exclude_parent = false
target_position = Vector3(0, 0, -2)
collision_mask = 28

[node name="RayCastMantleUpper" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
exclude_parent = false
target_position = Vector3(0, 0, -2)
collision_mask = 28

[node name="RayCastLedgeCheck" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
enabled = false
collision_mask = 28

[node name="InteractionRayCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -3)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_v7r3x")

[node name="CeilingCheck" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_apj3w")
target_position = Vector3(0, 0.5, 0)

[node name="GrappleHook" type="Node" parent="." node_paths=PackedStringArray("ray", "rope")]
script = ExtResource("18_4hp3t")
ray = NodePath("../Head/CameraHolder/CameraShaker/Camera/GrappleRay")
minRestFraction = 0.2
restLengthCurve = SubResource("Resource_2e838")
rope = NodePath("../Head/CameraHolder/CameraShaker/Camera/Rope")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("22_chq6j")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 25.0
offset_right = 84.0
offset_bottom = 48.0
text = "Speed: 0.0"

[node name="AnimLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 65.0
offset_right = 85.0
offset_bottom = 88.0
text = "Now playing:"

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/Control" node_paths=PackedStringArray("weapon_manager")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 5
texture_under = ExtResource("27_21i5i")
texture_progress = ExtResource("27_21i5i")
script = ExtResource("24_vs6b3")
weapon_manager = NodePath("../../../Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera/PLA/WeaponSlot")

[node name="HUD" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/Control/HUD"]
layout_mode = 2
texture = ExtResource("25_ugni6")
stretch_mode = 3

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("23_43gd7")
initial_state = NodePath("AirState")
debug_transitions = true

[node name="GroundState" type="Node" parent="StateMachine"]
script = ExtResource("24_do0ij")

[node name="AirState" type="Node" parent="StateMachine"]
script = ExtResource("25_vs6b3")

[node name="DashState" type="Node" parent="StateMachine"]
script = ExtResource("26_4hp3t")

[node name="MantleState" type="Node" parent="StateMachine"]
script = ExtResource("27_hk0st")

[node name="SlideState" type="Node" parent="StateMachine"]
script = ExtResource("28_1rskr")

[editable path="Head/CameraHolder/CameraShaker/Camera/SubViewportContainer/SubViewport/viewmodel_camera"]
